# DARF

./: .coveragerc  .fdignore  .gitignore  .gitlab-ci.yml  .pylintrc  CHANGES.txt  DARF.code-workspace  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml  pylint.yml
Conf/TDD/: bad.csv  good.csv  good_nh.csv  half.csv  medium.yaml  newConf.yaml  small.yaml
Conf/default/: data.ini  default.ini  env.ini  io.ini  plot.ini
darf/: __init__.py  main.py
darf/Examples/: FirstPlot.py  __init__.py
darf/default_ini/: default.ini  env.ini  io.ini  operations.ini
darf/pylint_plugins/: __init__.py  pylint_decorator.py
darf/src/: __init__.py  data_manager.py  operations_obj.py
docs/public/: .buildinfo  APIusage.html  CLIusage.html  Changelog.html  Contributing.html  Customization.html  Dataset.html  DatasetForking.html  DatasetOperations.html  DevelopmentGuidelines.html  Examples.FirstPlot.html  Examples.data_manipulation.apply_operations.html  Examples.data_manipulation.html  Examples.html  Features.html  FigureLevelCustomization.html  Installing.html  Plot.html  PlotLevelCustomization.html  UserDefinedFunctions.html  darf.Examples.FirstPlot.html  darf.Examples.customize_plots.apply_plot.html  darf.Examples.customize_plots.html  darf.Examples.data_manipulation.apply_operations.html  darf.html  (+128 more)
public/: .buildinfo  APIusage.html  CLIusage.html  Changelog.html  Contributing.html  Customization.html  Dataset.html  DatasetForking.html  DatasetOperations.html  DevelopmentGuidelines.html  Examples.FirstPlot.html  Examples.data_manipulation.apply_operations.html  Examples.data_manipulation.html  Examples.html  Features.html  FigureLevelCustomization.html  Installing.html  Plot.html  PlotLevelCustomization.html  UserDefinedFunctions.html  darf.Examples.FirstPlot.html  darf.Examples.customize_plots.apply_plot.html  darf.Examples.customize_plots.html  darf.Examples.data_manipulation.apply_operations.html  darf.Examples.data_manipulation.html  darf.Examples.html  darf.html  darf.main.html  darf.pylint_plugins.html  darf.pylint_plugins.pylint_decorator.html  darf.src.context_managers.context_managers.html  darf.src.context_managers.html  darf.src.data_loader.html  darf.src.data_loader.load_base.html  darf.src.data_loader.load_dependent.html  darf.src.data_loader.load_list.html  darf.src.data_loader.load_local.html  darf.src.data_loader.load_online.html  darf.src.data_loader.load_pkl.html  darf.src.data_loader.load_remote.html  (+68 more)
(+420 files in other folders)
