# © 2025 Nokia
# Licensed under the BSD 3-Clause License
# SPDX-License-Identifier: BSD-3-Clause
#
# Contact: Mattia Milani (Nokia) <mattia.milani@nokia.com>

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DARF"
version = "2.0.0"
authors = [
  { name="Mattia Milani", email="mattia.milani@nokia.com" },
]
maintainers = [
  {name = "Mattia Milani", email = "mattia.milani@nokia.com"}
]
description = "A Python package to plot data from a configuration file"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages]
find = {exclude = ["darf.tests*", "ez_setup"]}

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock"
]
setup = [
    "pytest-runner"
]

[project.scripts]
darf = "darf.main:main"
